crates/oc-tui/src/snapshots/oc_tui__theme__tests__opencode.snap
---
source: crates/oc-tui/src/theme_tests.rs
expression: "theme_sample(&registry, name, Mode::Dark)"
---
"opencode                  " fg=#eeeeee bg=#0a0a0a mod=BOLD
"primary                   " fg=#fab283 bg=#0a0a0a mod=NONE
"secondary                 " fg=#5c9cf5 bg=#0a0a0a mod=NONE
"accent                    " fg=#9d7cd8 bg=#0a0a0a mod=NONE
"error                     " fg=#e06c75 bg=#0a0a0a mod=NONE
"warning                   " fg=#f5a742 bg=#0a0a0a mod=NONE
"success                   " fg=#7fd88f bg=#0a0a0a mod=NONE
"info                      " fg=#56b6c2 bg=#0a0a0a mod=NONE
"text                      " fg=#eeeeee bg=#0a0a0a mod=NONE
"textMuted                 " fg=#808080 bg=#0a0a0a mod=NONE
"background                " fg=#0a0a0a bg=#0a0a0a mod=NONE
"backgroundPanel           " fg=#141414 bg=#0a0a0a mod=NONE
"backgroundElement         " fg=#1e1e1e bg=#0a0a0a mod=NONE
"border                    " fg=#484848 bg=#0a0a0a mod=NONE
"borderActive              " fg=#606060 bg=#0a0a0a mod=NONE
"borderSubtle              " fg=#3c3c3c bg=#0a0a0a mod=NONE
"diffAdded                 " fg=#4fd6be bg=#0a0a0a mod=NONE
"diffRemoved               " fg=#c53b53 bg=#0a0a0a mod=NONE
"diffContext               " fg=#828bb8 bg=#0a0a0a mod=NONE
"diffHunkHeader            " fg=#828bb8 bg=#0a0a0a mod=NONE
"diffHighlightAdded        " fg=#b8db87 bg=#0a0a0a mod=NONE
"diffHighlightRemoved      " fg=#e26a75 bg=#0a0a0a mod=NONE
"diffAddedBg               " fg=#20303b bg=#0a0a0a mod=NONE
"diffRemovedBg             " fg=#37222c bg=#0a0a0a mod=NONE
"diffContextBg             " fg=#141414 bg=#0a0a0a mod=NONE
"diffLineNumber            " fg=#8f8f8f bg=#0a0a0a mod=NONE
"diffAddedLineNumberBg     " fg=#1b2b34 bg=#0a0a0a mod=NONE
"diffRemovedLineNumberBg   " fg=#2d1f26 bg=#0a0a0a mod=NONE
"markdownText              " fg=#eeeeee bg=#0a0a0a mod=NONE
"markdownHeading           " fg=#9d7cd8 bg=#0a0a0a mod=NONE
"markdownLink              " fg=#fab283 bg=#0a0a0a mod=NONE
"markdownLinkText          " fg=#56b6c2 bg=#0a0a0a mod=NONE
"markdownCode              " fg=#7fd88f bg=#0a0a0a mod=NONE
"markdownBlockQuote        " fg=#e5c07b bg=#0a0a0a mod=NONE
"markdownEmph              " fg=#e5c07b bg=#0a0a0a mod=NONE
"markdownStrong            " fg=#f5a742 bg=#0a0a0a mod=NONE
"markdownHorizontalRule    " fg=#808080 bg=#0a0a0a mod=NONE
"markdownListItem          " fg=#fab283 bg=#0a0a0a mod=NONE
"markdownListEnumeration   " fg=#56b6c2 bg=#0a0a0a mod=NONE
"markdownImage             " fg=#fab283 bg=#0a0a0a mod=NONE
"markdownImageText         " fg=#56b6c2 bg=#0a0a0a mod=NONE
"markdownCodeBlock         " fg=#eeeeee bg=#0a0a0a mod=NONE
"syntaxComment             " fg=#808080 bg=#0a0a0a mod=NONE
"syntaxKeyword             " fg=#9d7cd8 bg=#0a0a0a mod=NONE
"syntaxFunction            " fg=#fab283 bg=#0a0a0a mod=NONE
"syntaxVariable            " fg=#e06c75 bg=#0a0a0a mod=NONE
"syntaxString              " fg=#7fd88f bg=#0a0a0a mod=NONE
"syntaxNumber              " fg=#f5a742 bg=#0a0a0a mod=NONE
"syntaxType                " fg=#e5c07b bg=#0a0a0a mod=NONE
"syntaxOperator            " fg=#56b6c2 bg=#0a0a0a mod=NONE
"syntaxPunctuation         " fg=#eeeeee bg=#0a0a0a mod=NONE
"selectedListItemText      " fg=#0a0a0a bg=#0a0a0a mod=NONE
"backgroundMenu            " fg=#1e1e1e bg=#0a0a0a mod=NONE
"thinkingOpacity 0.60      " fg=#808080 bg=#0a0a0a mod=NONE
"selectedForeground        " fg=#0a0a0a bg=#fab283 mod=NONE
