crates/oc-tui/src/snapshots/oc_tui__theme__tests__tokyonight.snap
---
source: crates/oc-tui/src/theme_tests.rs
expression: "theme_sample(&registry, name, Mode::Dark)"
---
"tokyonight                " fg=#c8d3f5 bg=#1a1b26 mod=BOLD
"primary                   " fg=#82aaff bg=#1a1b26 mod=NONE
"secondary                 " fg=#c099ff bg=#1a1b26 mod=NONE
"accent                    " fg=#ff966c bg=#1a1b26 mod=NONE
"error                     " fg=#ff757f bg=#1a1b26 mod=NONE
"warning                   " fg=#ff966c bg=#1a1b26 mod=NONE
"success                   " fg=#c3e88d bg=#1a1b26 mod=NONE
"info                      " fg=#82aaff bg=#1a1b26 mod=NONE
"text                      " fg=#c8d3f5 bg=#1a1b26 mod=NONE
"textMuted                 " fg=#828bb8 bg=#1a1b26 mod=NONE
"background                " fg=#1a1b26 bg=#1a1b26 mod=NONE
"backgroundPanel           " fg=#1e2030 bg=#1a1b26 mod=NONE
"backgroundElement         " fg=#222436 bg=#1a1b26 mod=NONE
"border                    " fg=#737aa2 bg=#1a1b26 mod=NONE
"borderActive              " fg=#9099b2 bg=#1a1b26 mod=NONE
"borderSubtle              " fg=#545c7e bg=#1a1b26 mod=NONE
"diffAdded                 " fg=#4fd6be bg=#1a1b26 mod=NONE
"diffRemoved               " fg=#c53b53 bg=#1a1b26 mod=NONE
"diffContext               " fg=#828bb8 bg=#1a1b26 mod=NONE
"diffHunkHeader            " fg=#828bb8 bg=#1a1b26 mod=NONE
"diffHighlightAdded        " fg=#b8db87 bg=#1a1b26 mod=NONE
"diffHighlightRemoved      " fg=#e26a75 bg=#1a1b26 mod=NONE
"diffAddedBg               " fg=#20303b bg=#1a1b26 mod=NONE
"diffRemovedBg             " fg=#37222c bg=#1a1b26 mod=NONE
"diffContextBg             " fg=#1e2030 bg=#1a1b26 mod=NONE
"diffLineNumber            " fg=#8f909a bg=#1a1b26 mod=NONE
"diffAddedLineNumberBg     " fg=#1b2b34 bg=#1a1b26 mod=NONE
"diffRemovedLineNumberBg   " fg=#2d1f26 bg=#1a1b26 mod=NONE
"markdownText              " fg=#c8d3f5 bg=#1a1b26 mod=NONE
"markdownHeading           " fg=#c099ff bg=#1a1b26 mod=NONE
"markdownLink              " fg=#82aaff bg=#1a1b26 mod=NONE
"markdownLinkText          " fg=#86e1fc bg=#1a1b26 mod=NONE
"markdownCode              " fg=#c3e88d bg=#1a1b26 mod=NONE
"markdownBlockQuote        " fg=#ffc777 bg=#1a1b26 mod=NONE
"markdownEmph              " fg=#ffc777 bg=#1a1b26 mod=NONE
"markdownStrong            " fg=#ff966c bg=#1a1b26 mod=NONE
"markdownHorizontalRule    " fg=#828bb8 bg=#1a1b26 mod=NONE
"markdownListItem          " fg=#82aaff bg=#1a1b26 mod=NONE
"markdownListEnumeration   " fg=#86e1fc bg=#1a1b26 mod=NONE
"markdownImage             " fg=#82aaff bg=#1a1b26 mod=NONE
"markdownImageText         " fg=#86e1fc bg=#1a1b26 mod=NONE
"markdownCodeBlock         " fg=#c8d3f5 bg=#1a1b26 mod=NONE
"syntaxComment             " fg=#828bb8 bg=#1a1b26 mod=NONE
"syntaxKeyword             " fg=#c099ff bg=#1a1b26 mod=NONE
"syntaxFunction            " fg=#82aaff bg=#1a1b26 mod=NONE
"syntaxVariable            " fg=#ff757f bg=#1a1b26 mod=NONE
"syntaxString              " fg=#c3e88d bg=#1a1b26 mod=NONE
"syntaxNumber              " fg=#ff966c bg=#1a1b26 mod=NONE
"syntaxType                " fg=#ffc777 bg=#1a1b26 mod=NONE
"syntaxOperator            " fg=#86e1fc bg=#1a1b26 mod=NONE
"syntaxPunctuation         " fg=#c8d3f5 bg=#1a1b26 mod=NONE
"selectedListItemText      " fg=#1a1b26 bg=#1a1b26 mod=NONE
"backgroundMenu            " fg=#222436 bg=#1a1b26 mod=NONE
"thinkingOpacity 0.60      " fg=#828bb8 bg=#1a1b26 mod=NONE
"selectedForeground        " fg=#1a1b26 bg=#82aaff mod=NONE
