crates/oc-tui/src/snapshots/oc_tui__theme__tests__zenburn.snap
---
source: crates/oc-tui/src/theme_tests.rs
expression: "theme_sample(&registry, name, Mode::Dark)"
---
"zenburn                   " fg=#dcdccc bg=#3f3f3f mod=BOLD
"primary                   " fg=#8cd0d3 bg=#3f3f3f mod=NONE
"secondary                 " fg=#dc8cc3 bg=#3f3f3f mod=NONE
"accent                    " fg=#93e0e3 bg=#3f3f3f mod=NONE
"error                     " fg=#cc9393 bg=#3f3f3f mod=NONE
"warning                   " fg=#f0dfaf bg=#3f3f3f mod=NONE
"success                   " fg=#7f9f7f bg=#3f3f3f mod=NONE
"info                      " fg=#dfaf8f bg=#3f3f3f mod=NONE
"text                      " fg=#dcdccc bg=#3f3f3f mod=NONE
"textMuted                 " fg=#9f9f9f bg=#3f3f3f mod=NONE
"background                " fg=#3f3f3f bg=#3f3f3f mod=NONE
"backgroundPanel           " fg=#4f4f4f bg=#3f3f3f mod=NONE
"backgroundElement         " fg=#5f5f5f bg=#3f3f3f mod=NONE
"border                    " fg=#5f5f5f bg=#3f3f3f mod=NONE
"borderActive              " fg=#8cd0d3 bg=#3f3f3f mod=NONE
"borderSubtle              " fg=#4f4f4f bg=#3f3f3f mod=NONE
"diffAdded                 " fg=#7f9f7f bg=#3f3f3f mod=NONE
"diffRemoved               " fg=#cc9393 bg=#3f3f3f mod=NONE
"diffContext               " fg=#9f9f9f bg=#3f3f3f mod=NONE
"diffHunkHeader            " fg=#93e0e3 bg=#3f3f3f mod=NONE
"diffHighlightAdded        " fg=#8fb28f bg=#3f3f3f mod=NONE
"diffHighlightRemoved      " fg=#dca3a3 bg=#3f3f3f mod=NONE
"diffAddedBg               " fg=#4f5f4f bg=#3f3f3f mod=NONE
"diffRemovedBg             " fg=#5f4f4f bg=#3f3f3f mod=NONE
"diffContextBg             " fg=#4f4f4f bg=#3f3f3f mod=NONE
"diffLineNumber            " fg=#d2d2d2 bg=#3f3f3f mod=NONE
"diffAddedLineNumberBg     " fg=#4f5f4f bg=#3f3f3f mod=NONE
"diffRemovedLineNumberBg   " fg=#5f4f4f bg=#3f3f3f mod=NONE
"markdownText              " fg=#dcdccc bg=#3f3f3f mod=NONE
"markdownHeading           " fg=#f0dfaf bg=#3f3f3f mod=NONE
"markdownLink              " fg=#8cd0d3 bg=#3f3f3f mod=NONE
"markdownLinkText          " fg=#93e0e3 bg=#3f3f3f mod=NONE
"markdownCode              " fg=#7f9f7f bg=#3f3f3f mod=NONE
"markdownBlockQuote        " fg=#9f9f9f bg=#3f3f3f mod=NONE
"markdownEmph              " fg=#e0cf9f bg=#3f3f3f mod=NONE
"markdownStrong            " fg=#dfaf8f bg=#3f3f3f mod=NONE
"markdownHorizontalRule    " fg=#9f9f9f bg=#3f3f3f mod=NONE
"markdownListItem          " fg=#8cd0d3 bg=#3f3f3f mod=NONE
"markdownListEnumeration   " fg=#93e0e3 bg=#3f3f3f mod=NONE
"markdownImage             " fg=#8cd0d3 bg=#3f3f3f mod=NONE
"markdownImageText         " fg=#93e0e3 bg=#3f3f3f mod=NONE
"markdownCodeBlock         " fg=#dcdccc bg=#3f3f3f mod=NONE
"syntaxComment             " fg=#7f9f7f bg=#3f3f3f mod=NONE
"syntaxKeyword             " fg=#f0dfaf bg=#3f3f3f mod=NONE
"syntaxFunction            " fg=#8cd0d3 bg=#3f3f3f mod=NONE
"syntaxVariable            " fg=#dcdccc bg=#3f3f3f mod=NONE
"syntaxString              " fg=#cc9393 bg=#3f3f3f mod=NONE
"syntaxNumber              " fg=#8fb28f bg=#3f3f3f mod=NONE
"syntaxType                " fg=#93e0e3 bg=#3f3f3f mod=NONE
"syntaxOperator            " fg=#f0dfaf bg=#3f3f3f mod=NONE
"syntaxPunctuation         " fg=#dcdccc bg=#3f3f3f mod=NONE
"selectedListItemText      " fg=#3f3f3f bg=#3f3f3f mod=NONE
"backgroundMenu            " fg=#5f5f5f bg=#3f3f3f mod=NONE
"thinkingOpacity 0.60      " fg=#9f9f9f bg=#3f3f3f mod=NONE
"selectedForeground        " fg=#3f3f3f bg=#8cd0d3 mod=NONE
